[project]
name = "fh6-auction-house-sniper"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "bettercam>=1.0",
    "mss>=9.0",
    "numpy>=1.26",
    "opencv-python>=4.10",
    "pynput>=1.7",
    "pywin32>=306",
    "win11toast>=0.35",
]
